# Infrastructure-As-Code

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  SECURITY.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: feature-request.md
.github/docs/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  dev_build.yml  main_build.yml
.sonarlint/: connectedMode.json
certifications/CKA/: README.md  cloud-init.yaml  main.tf  outputs.tf  vars.tf
certifications/CKA/scripts/: contexts-and-role-bindings.sh  control_plane.sh  deployments-replica-sets.sh  etcd-backup.sh  hpa-exercise.sh  job-testing.sh  kubernetes-upgrade.sh  labels-taints-tolerations.sh  namespace-limits.sh  routing.sh  secrets-configmaps-persistent_volumes.sh  services.sh  test-tls-connection.sh  worker.sh
certifications/CKAD/: main.tf
charts/gitlab/: gitlab-values.yml  helm-install.ps1  helm.ps1  values.yml
code/c/: CMakeLists.txt
code/c/src/learning/: learning.c  learning.h  learning_lib.c  main_wrapper.c
code/c/src/learning/tests/: test_learning.c
docs/: mac-setup.md
front-end/vue/hello-world/: package-lock.json
infrastructure/terraform/: main.tf
infrastructure/terraform/modules/monitored_aws_account/: budgets.tf  iam.tf  kms.tf  main.tf  network.tf  variables.tf
opentofu/: README.md  main.tf
opentofu/DigitalOcean-Infrastructure/: README.md  cloudflare.tf  main.tf  vars.tf
opentofu/DigitalOcean-Kubernetes/: README.md  cloudflare.tf  dev-nginx.tf  ingress-nginx-values.yaml.tmpl  main.tf  vars.tf
opentofu/HIPAA/bootstrap/: README.md  iam.tf  kms.tf  main.tf  outputs.tf  provider.tf  s3.tf  terraform.tf  terraform.tfvars.example  variables.tf
opentofu/HIPAA/organization/: README.md  cloudtrail.tf  eventbridge.tf  guardduty.tf  guardduty_organization.tf  outputs.tf  provider.tf  route53.tf  s3.tf  sns.tf  terraform.tf  terraform.tfvars.example  variables.tf
opentofu/HIPAA/organization/aws/: README.md  cloudtrail.tf  eventbridge.tf  github-oidc.tf  outputs.tf  provider.tf  route53.tf  s3.tf  ses.tf  sns.tf  terraform.tf  terraform.tfvars.example  variables.tf
opentofu/HIPAA/organization/mongo/: README.md  mongo.tf  outputs.tf  provider.tf  terraform.tf  terraform.tfvars.example  variables.tf
review-items/mocksurvey365/: .env.example  .gitignore  README.md  baseUrl.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
review-items/mocksurvey365-api/: .gitignore  README.md  app.js  package-lock.json  package.json  server.js  socket.js  swaggerConfig.js
review-items/mocksurvey365-api/.github/workflows/: node.js.yml
review-items/mocksurvey365-api/docs/: BROOKDALE_ARCHITECTURE_DIAGRAM.md  BROOKDALE_ARCHITECTURE_TEXT.md  DEPLOYMENT_PROCESS.md  IT_DISCOVERY_RESPONSES.md  MOCKSURVEY365_ARCHITECTURE_AND_DATAFLOWS.md
review-items/mocksurvey365-api/public/citationReport/: citationReport-2026-01-10T21-14-30-414Z.docx  citationReport-2026-01-13T05-44-45-049Z.docx
review-items/mocksurvey365-api/src/config/: redis.config.js
review-items/mocksurvey365-api/src/constants/: constants.js
review-items/mocksurvey365-api/src/controllers/: health.controller.js
review-items/mocksurvey365-portal/: .gitignore  README.md  index.html  mandatory-task-payload.json  mandatory-task.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  test-auth.md  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  ux-ehancements.md  vite.config.ts
review-items/mocksurvey365-portal/src/: App.tsx  constants.ts  data.ts  index.css  main.tsx
review-items/mocksurvey365/public/: firebase-messaging-sw.js
review-items/mocksurvey365/scripts/: generate-firebase-config.js
review-items/mocksurvey365/src/: App.css  App.jsx  index.css  main.jsx
review-items/mocksurvey365/util/: plan.js
review-items/seniorliving/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
review-items/seniorliving/doc/: SRS.md
review-items/seniorliving/docs/: PHASE-1-Authentication-Onboarding.md  PHASE-2-Dashboard-Layout-Navigation.md  PHASE-3-IMPLEMENTATION-PLAN.md  PHASE-3-Survey-Builder.md  PHASE-4-Taking-Surveys.md  PHASE-5-Deficiency-Tracking.md  PHASE-6-Plan-of-Correction.md  PHASE-7-Compliance-Dashboard.md  PHASE-8-Document-Management.md  PHASE-9-Additional-Components.md
review-items/seniorliving/src/: App.jsx  index.css  main.jsx
scripts/: __init__.py
scripts/powershell/: audit_log_backups.ps1  system_log_backups.ps1
scripts/python/: __init__.py  requirements.txt  skill_compression.py
scripts/python/tests/: test_skill_compression.py
scripts/python_scripts/: requirements.txt  test_skill_compression.py
terraform/irad/: README.md  dns.tf  iam.tf  main.tf  outputs.tf  variables.tf  vpc-peering.tf
(+615 files in other folders)
